--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,18 @@ plugins {
     id 'java'
 }
 
-group 'com.ll'
-version '1.0-SNAPSHOT'
+group = 'com.ll'
+version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation platform('org.junit:junit-bom:5.9.1')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation 'org.assertj:assertj-core:3.11.1'
 }
 
 test {
